[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["build", "dist", ".idea", ".vscode", "PESViewer.egg-info"]

[project]
name = "pesviewer"
version = "1.1.0"
description = "Potential Energy Surface Visualizer"
readme = "README.md"
requires-python = ">=3.6.0"
license = {file = "LICENSE"}

authors = [
    {name="Ruben Van de Vijver", email="ruben.vandevijver@ugent.be"},
    {name="Judit Zádor", email="jzador@sandia.gov"},
    {name="Carles Martí", email="cmartia@sandia.gov"},
]
maintainers = [
    {name="Ruben Van de Vijver", email="ruben.vandevijver@ugent.be"},
    {name="Judit Zádor", email="jzador@sandia.gov"},
    {name="Carles Martí", email="cmartia@sandia.gov"},
]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering :: Chemistry"
]
dependencies = [
        "numpy>=1.17.0",
        "matplotlib",
        "networkx",
        "pillow",
        "pyvis",
]

[project.urls]
homepage = "https://github.com/zadorlab/PESViewer"
documentation = "https://github.com/zadorlab/PESViewer/wiki"

[project.scripts]
pesviewer = "pesviewer.pesviewer:main"
